name:                ktpackagefix
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ktpackagefix#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ktpackagefix
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ViewBindingMigration
                     , KtPackageMigration
  default-language:    Haskell2010
  -- ghc-options: -Wall -O2 -static -threaded
  -- cc-options: -static
  -- ld-options: -static -pthread
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , text
                     , foldl
